<resources>
    <!-- Title for the application. [CHAR LIMIT=12] -->
    <string name="app_name">Meow Music Player</string>

    <!-- Category name for the user's playlists [CHAR LIMIT=20] -->
    <string name="list_playlists">Playlists</string>

    <!-- Category name for the Now Playing screen [CHAR LIMIT=20] -->
    <string name="nowPlaying">Now Playing</string>
    <string name="title_activity_menu">Your Music</string>
    <string name="action_settings">Settings</string>

    <!-- Category name for the list of songs. -->
    <string name="play">Play</string>
    <string name="stop">Stop</string>
    <string name="pause">Pause</string>

    <!-- Category name for the list of songs. -->
    <string name="tab_text_1">Songs</string>

    <!-- Category name for the list of Artists. -->
    <string name="tab_text_2">Artists</string>

    <!-- Category name for the list of Albums.  -->
    <string name="tab_text_3">Albums</string>

    <string name="song_name">Current Track</string>
    <string name="artist_name">Current Artist</string>
    <string name="album_name">Current Album</string>
    <string name="settings_one">Settings 1</string>
    <string name="settings_two">Settings 2</string>

</resources>
