<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/now_playing"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NowPlayingActivity"
    android:clickable="true"
    android:focusable="true"
    android:background="@drawable/background_gradient">

    <android.support.v7.widget.Toolbar
        android:id="@+id/secondary_toolbar"
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:minHeight="?attr/actionBarSize"
        android:background="@color/primary_dark_color"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" >

        <ImageView
            android:id="@+id/selected_track_image"
            android:layout_width="@dimen/image_size"
            android:layout_height="@dimen/image_size"
            android:src="@drawable/artist_background"
            />

        <TextView
            android:id="@+id/selected_track_title"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/CategoryStyle"
            android:text="@string/song_name"/>

        <ImageButton
            android:id="@+id/player_control"
            android:layout_gravity="end"
            android:layout_width="@dimen/image_size"
            android:layout_height="@dimen/image_size"
            android:src="@drawable/play_arrow"
            android:background="@color/primary_color"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/nowPlaying"
            android:clickable="true"
            android:focusable="true"/>

    </android.support.v7.widget.Toolbar>

    <ImageView
        android:id="@+id/albumArt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/playTrack"
        android:layout_below="@+id/secondary_toolbar"
        android:adjustViewBounds="true"
        android:contentDescription="@string/tab_text_3"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_launcher_foreground" />

    <TextView
        android:id="@+id/playTrack"
        style="@style/NowPlayingStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/playArtist"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="-34dp"
        android:gravity="bottom"
        android:padding="16dp"
        android:text="@string/song_name"/>

    <TextView
        android:id="@+id/playArtist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/NowPlayingStyle"
        android:layout_above="@+id/seekbar"
        android:text="@string/artist_name"
        android:padding="16dp"
        android:gravity="top"/>

    <SeekBar
        android:id="@+id/seekbar"
        style="@style/Widget.AppCompat.SeekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttons"
        android:padding="16dp" />

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        style="@style/Widget.AppCompat.ButtonBar"
        android:padding="16dp"
        >

        <Button
            android:id="@+id/pause_btn"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/pause"
            android:text="@string/pause"
            android:clickable="true"
            android:focusable="true"/>

        <Button
            android:id="@+id/play_btn"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/play"
            android:text="@string/play"
            android:clickable="true"
            android:focusable="true"/>

        <Button
            android:id="@+id/stop_btn"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/stop"
            android:text="@string/stop"
            android:clickable="true"
            android:focusable="true"/>

    </LinearLayout>

</RelativeLayout>