<?xml version="1.0" encoding="utf-8"?>
<com.sothree.slidinguppanel.SlidingUpPanelLayout xmlns:sothree="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sliding_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    sothree:umanoPanelHeight="68dp"
    sothree:umanoShadowHeight="4dp"
    tools:context="com.sothree.slidinguppanel.SlidingUpPanelLayout">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        tools:context="com.example.android.meowmusicplayer.MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/songs"
                style="@style/CategoryStyle"
                android:background="@color/tabs"
                android:text="@string/tab_text_1" />

            <TextView
                android:id="@+id/artists"
                style="@style/CategoryStyle"
                android:background="@color/tabs"
                android:text="@string/tab_text_2" />

            <TextView
                android:id="@+id/albums"
                style="@style/CategoryStyle"
                android:background="@color/tabs"
                android:text="@string/tab_text_3" />



        </LinearLayout>



    </FrameLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <include layout="@layout/now_playing"/>

    </LinearLayout>


</com.sothree.slidinguppanel.SlidingUpPanelLayout>